buy and sell stock solved

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/erarunkushwaha/DSA-WITH-CPP#readme",
   "dependencies": {
     "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "typescript": "^5.8.3"
   }
 }
